# malloy

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  coding_style.md  license.txt  readme.md  utils.cmake
examples/basic/: CMakeLists.txt  main.cpp
examples/client/: CMakeLists.txt  client_example_main.hpp  example.cmake
examples/client/http-custom-filter/: CMakeLists.txt  main.cpp
examples/client/http-file-download/: main.cpp
examples/client/http-plain/: main.cpp
examples/client/http-plain-coro/: CMakeLists.txt  main.cpp
examples/client/http_assembled_request/: CMakeLists.txt  main.cpp
examples/client/http_custom_filter/: main.cpp
examples/client/http_file_download/: CMakeLists.txt  main.cpp
examples/client/http_plain/: CMakeLists.txt  main.cpp
examples/client/http_tls/: CMakeLists.txt  main.cpp
examples/client/websocket/: CMakeLists.txt  main.cpp
examples/client/websocket-plain/: main.cpp
examples/client/websocket_plain/: CMakeLists.txt  main.cpp
examples/client/websocket_secure/: CMakeLists.txt  main.cpp
examples/server/: CMakeLists.txt  example.cmake
examples/server/applications/: CMakeLists.txt
examples/server/applications/demo01/: CMakeLists.txt  app.cpp  app.hpp  database.cpp  database.hpp  form_renderer.hpp  from_renderer.cpp  main.cpp  page_master.hpp  readme.md
examples/server/basic/: CMakeLists.txt  main.cpp
examples/server/custom-request-filter/: main.cpp
examples/server/custom_request_filter/: CMakeLists.txt  main.cpp
examples/server/html_form/: CMakeLists.txt  main.cpp
examples/server/html_pages/: CMakeLists.txt  main.cpp  page1.hpp
examples/server/http_auth/: CMakeLists.txt  main.cpp
examples/server/nested_routers/: CMakeLists.txt  main.cpp
examples/server/rest/: CMakeLists.txt  main.cpp
examples/server/routing/: CMakeLists.txt
examples/server/routing/files/: CMakeLists.txt  main.cpp
examples/server/routing/policies/: CMakeLists.txt  main.cpp
examples/server/routing/preflights/: CMakeLists.txt  main.cpp
examples/server/routing/regex/: CMakeLists.txt  main.cpp
examples/server/routing/subrouters/: CMakeLists.txt  main.cpp
examples/server/session/: CMakeLists.txt  main.cpp
examples/server/ssl/: CMakeLists.txt  main.cpp
examples/server/static_content/: file2.html  index.html
examples/server/websocket/: CMakeLists.txt  main.cpp
lib/malloy/: CMakeLists.txt  controller.cpp  controller.hpp  error.hpp  external.cmake  listener.cpp  listener.hpp  malloy-config.cmake  malloy-config.cmake.in  malloy.hpp  server_certificate.hpp  target_setup.cmake  type.hpp  type_traits.hpp  utils.hpp  win32_version.cmake
lib/malloy/client/: CMakeLists.txt  connection.hpp  connection_plain.hpp  connection_tls.hpp  controller.cpp  controller.hpp  external.cmake  tmp.hpp  type_traits.hpp
lib/malloy/client/http/: CMakeLists.txt  connection.hpp  connection_plain.hpp  connection_tls.hpp  request_result.hpp
lib/malloy/client/websocket/: CMakeLists.txt  connection.hpp
lib/malloy/core/: CMakeLists.txt  awaitable.hpp  controller.cpp  controller.hpp  error.hpp  external.cmake  mp.hpp  tmp.hpp  type_traits.hpp  utils.hpp
lib/malloy/core/detail/: CMakeLists.txt  action_queue.hpp  controller_run_result.hpp  task.hpp  version_checks.hpp
lib/malloy/core/html/: CMakeLists.txt  form.cpp  form.hpp  form_data.cpp  form_data.hpp  form_field.hpp  form_renderer.cpp  form_renderer.hpp  html.hpp  multipart_parser.cpp  multipart_parser.hpp  page.cpp  page.hpp
lib/malloy/core/http/: CMakeLists.txt  cookie.cpp  cookie.hpp  generator.cpp  generator.hpp  http.hpp  request.hpp  response.hpp  types.hpp  uri.cpp  uri.hpp  url.hpp  utils.hpp
lib/malloy/core/rest/: CMakeLists.txt  concepts.hpp  message.hpp  object.hpp  rest.hpp
lib/malloy/core/tcp/: CMakeLists.txt  rate_policy.hpp  stream.hpp  tcp.hpp
lib/malloy/core/tls/: CMakeLists.txt  manager.cpp  manager.hpp
lib/malloy/core/websocket/: CMakeLists.txt  connection.hpp  stream.hpp  types.hpp  url.hpp
lib/malloy/html/: CMakeLists.txt  form.cpp  form.hpp  html.hpp
lib/malloy/http/: CMakeLists.txt  connection.cpp  connection.hpp  cookie.cpp  generator.cpp  generator.hpp  http.hpp  http_generator.cpp  http_generator.hpp  request.cpp  request.hpp  response.hpp  route.hpp  route_basic.hpp  router.cpp  router.hpp  session.cpp  session.hpp  type_traits.hpp  types.hpp  uri.cpp  uri.hpp
lib/malloy/http/connection/: connection.hpp  connection_detector.cpp  connection_detector.hpp  connection_plain.hpp  connection_tls.hpp
lib/malloy/http/filters/: CMakeLists.txt  file.hpp
lib/malloy/http/routing/: route.hpp  route_basic.hpp  route_files.hpp  route_redirect.hpp  router.cpp  router.hpp
lib/malloy/http/session/: CMakeLists.txt  manager.cpp  manager.hpp  session.hpp  storage.hpp  storage_memory.hpp  types.hpp
lib/malloy/logging/: CMakeLists.txt  manager.cpp  manager.hpp
lib/malloy/mock/: CMakeLists.txt  mocks.hpp
lib/malloy/server/: CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  listener.cpp  listener.hpp  routing_context.cpp  routing_context.hpp
lib/malloy/server/app_fw/: CMakeLists.txt  app.cpp  app.hpp  environment.hpp  external.cmake  page.cpp  page.hpp  page_content.cpp  page_content.hpp  page_master.cpp  page_master.hpp  renderer.cpp  renderer.hpp
lib/malloy/server/auth/: CMakeLists.txt  basic.hpp
lib/malloy/server/http/: CMakeLists.txt  connection.hpp  connection_detector.cpp  connection_detector.hpp  connection_plain.hpp  utils.hpp  (+5 more)
lib/malloy/tls/: CMakeLists.txt  manager.cpp  manager.hpp
lib/malloy/websocket/: CMakeLists.txt  connection.cpp  connection.hpp  session.cpp  session.hpp  stream.hpp  types.hpp  websocket.hpp
test/: CMakeLists.txt  coroutine_executor.hpp  mocks.hpp  test.hpp  test_main.cpp  tls_data.hpp
test/test_suites/components/: CMakeLists.txt  controller.cpp  endpoints.cpp  html_form.cpp  html_multipart_parser.cpp  http_generator.cpp  http_sessions_storage_memory.cpp  request.cpp  response.cpp  router.cpp  stream.cpp  uri.cpp  utils_core.cpp  utils_core_http.cpp  websockets.cpp
(+93 files in other folders)
