add_subdirectory(basic)
add_subdirectory(routing)
add_subdirectory(session)
add_subdirectory(websocket)
add_subdirectory(custom-request-filter)

if (MALLOY_FEATURE_HTML)
    add_subdirectory(html_form)
    add_subdirectory(html_pages)
endif()
if (MALLOY_FEATURE_TLS)
    add_subdirectory(ssl)
endif()
if (MALLOY_FEATURE_APPFW)
    add_subdirectory(applications)
endif()
