add_subdirectory(basic)
add_subdirectory(custom_request_filter)
add_subdirectory(routing)
add_subdirectory(session)
add_subdirectory(websocket)

if (MALLOY_FEATURE_HTML)
    add_subdirectory(html_form)
endif()
if (MALLOY_FEATURE_REST)
    add_subdirectory(rest)
endif()
if (MALLOY_FEATURE_TLS)
    add_subdirectory(ssl)
endif()
