add_subdirectory(session)

target_sources(
    ${TARGET_OBJS}
    PRIVATE
		connection.cpp
		connection.hpp
		cookie.cpp
		cookie.hpp
        generator.cpp
        generator.hpp
        http.hpp
        request.hpp
        response.hpp
        route.hpp
		route_basic.hpp
		route_files.hpp
		route_redirect.hpp
        router.cpp
        router.hpp
        uri.cpp
        uri.hpp
)
