add_subdirectory(routing)
add_subdirectory(session)

target_sources(
    ${TARGET_OBJS}
    PRIVATE
		connection.cpp
		connection.hpp
		cookie.cpp
		cookie.hpp
        generator.cpp
        generator.hpp
        http.hpp
        request.hpp
        response.hpp
		types.hpp
        uri.cpp
        uri.hpp
)
